--- a/main.html
+++ b/main.html
@@ -10,22 +10,19 @@
 		input{
 			display: block;
 			margin-top: 10px;
-			margin-left: 400px;
 		}
 		form{
 			float: left;
+			margin-left: auto;
 		}
 		#mastable{
 			float: right;
-			margin-right: 450px;
+			margin-right: auto;
 			margin-top: 16px;
 		}
 		.td{
 			background-color: springgreen;
 			padding: 10px;
-		}
-		span{
-			margin-left: 400px;
 		}
 		.header{
 			background-color: gray;
