--- a/main.html
+++ b/main.html
@@ -13,12 +13,13 @@
 		}
 		form{
 			float: left;
-			margin-left: auto;
+			margin-left: 30%;
+			margin-top: 40px;
 		}
 		#mastable{
 			float: right;
-			margin-right: auto;
-			margin-top: 16px;
+			margin-right: 30%;
+			margin-top: 40px;
 		}
 		.td{
 			background-color: springgreen;
